kubernetes/bad-camera-sensor.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: camera-sensor-c-0007
  labels:
    app.kubernetes.io/part-of: sensors
    app.openshift.io/runtime: java
    bad: "true"
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"devnation-2023-measure-enrichment"}]'
spec:
  containers:
    - name: sensor
      image: quay.io/devnation/devnation-2023-camera-sensor:1.0-SNAPSHOT
      imagePullPolicy: IfNotPresent
      securityContext:
        allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Pod
metadata:
  name: camera-sensor-c-0008
  labels:
    app.kubernetes.io/part-of: sensors
    app.openshift.io/runtime: java
    bad: "true"
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"devnation-2023-measure-enrichment"}]'
spec:
  containers:
    - name: sensor
      image: quay.io/devnation/devnation-2023-camera-sensor:1.0-SNAPSHOT
      imagePullPolicy: IfNotPresent
      securityContext:
        allowPrivilegeEscalation: false
