kubernetes/camera-sensor.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: camera-sensor-c-0001
  labels:
    app.kubernetes.io/part-of: sensors
    app.openshift.io/runtime: quarkus
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"devnation-2023-measure-enrichment"}]'
spec:
  containers:
    - name: sensor
      image: quay.io/devnation/devnation-2023-camera-sensor:1.0-SNAPSHOT
      imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Pod
metadata:
  name: camera-sensor-c-0002
  labels:
    app.kubernetes.io/part-of: sensors
    app.openshift.io/runtime: quarkus
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"devnation-2023-measure-enrichment"}]'
spec:
  containers:
    - name: sensor
      image: quay.io/devnation/devnation-2023-camera-sensor:1.0-SNAPSHOT
      imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Pod
metadata:
  name: camera-sensor-c-0003
  labels:
    app.kubernetes.io/part-of: sensors
    app.openshift.io/runtime: quarkus
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"devnation-2023-measure-enrichment"}]'
spec:
  containers:
    - name: sensor
      image: quay.io/devnation/devnation-2023-camera-sensor:1.0-SNAPSHOT
      imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Pod
metadata:
  name: camera-sensor-c-0004
  labels:
    app.kubernetes.io/part-of: sensors
    app.openshift.io/runtime: quarkus
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"devnation-2023-measure-enrichment"}]'
spec:
  containers:
    - name: sensor
      image: quay.io/devnation/devnation-2023-camera-sensor:1.0-SNAPSHOT
      imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Pod
metadata:
  name: camera-sensor-c-0005
  labels:
    app.kubernetes.io/part-of: sensors
    app.openshift.io/runtime: quarkus
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"devnation-2023-measure-enrichment"}]'
spec:
  containers:
    - name: sensor
      image: quay.io/devnation/devnation-2023-camera-sensor:1.0-SNAPSHOT
      imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Pod
metadata:
  name: camera-sensor-c-0006
  labels:
    app.kubernetes.io/part-of: sensors
    app.openshift.io/runtime: quarkus
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"devnation-2023-measure-enrichment"}]'
spec:
  containers:
    - name: sensor
      image: quay.io/devnation/devnation-2023-camera-sensor:1.0-SNAPSHOT
      imagePullPolicy: IfNotPresent
---
