kubernetes/picture-analyzer.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: picture-analyzer
  labels:
    app: picture-analyzer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: picture-analyzer
  template:
    metadata:
      labels:
        app: picture-analyzer
        deployment: picture-analyzer
    spec:
      containers:
        - name: picture-analyzer
          image: quay.io/cescoffi/devnation-2023-picture-analyzer:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 1000m
              memory: 3000Mi
            requests:
              cpu: 500m
              memory: 2200Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
