kubernetes/dashboard-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dashboard
  namespace: devnation
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/version: 1.0-SNAPSHOT
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: dashboard
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
